--- a/src/scss/partials/_main-content.scss
+++ b/src/scss/partials/_main-content.scss
@@ -4,6 +4,7 @@ main {
     @include column;
     position: relative;
     z-index: 50;
+    padding-bottom: 20rem;
 
     .main-bg-clip {
         box-shadow: 0 0.5rem 1rem #636363;
@@ -45,9 +46,10 @@ main {
         h2 {
             font-size: 1.5rem;
             text-transform: uppercase;
-            letter-spacing: 0.3rem;
-            padding: 0.7rem 0;
+            letter-spacing: 0.125rem;
+            padding: 0 1rem;
             margin-top: -3rem;
+            white-space: pre;
         }
 
         h3 {
@@ -151,7 +153,7 @@ main {
                         position: relative;
                         top: 0;
                         width: 90vw;
-                        height: 80vh;
+                        height: 50vh;
                         padding: 0;
                         margin: 1rem 0;
                         border-radius: 3rem;
@@ -323,3 +325,70 @@ main {
     }
 
 }
+@media (min-width: 60rem) {
+
+    #projects .grid .card {
+        width: 30vw;
+
+        p {
+            font-size: 1.5rem;
+        }
+
+        figure a {
+
+          img, #canvasPort {
+            width: 100%;
+            height: 40vh;
+          }
+
+          #canvasPort {
+            width: 30vw;
+          }
+
+        }
+
+    }
+
+}
+
+@media (min-width: 48rem) and (max-width: 60rem) {
+
+    main {
+        padding-bottom: 25rem;
+        
+        #projects {
+            
+            #githubBtn {
+                
+                font-size: 2rem;
+            }
+            
+            .grid .card {
+                width: 80vw;
+                
+                p {
+                    font-size: 2rem;
+                    padding: 1rem 0;
+                }
+                
+                figure a {
+        
+                  img, #canvasPort {
+                    width: 100%;
+                    height: 70vh;
+                  }
+        
+                  #canvasPort {
+                    width: 80vw;
+                  }
+        
+                }
+        
+            }
+        
+        }
+
+    }
+
+}
+
